--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<img src="resources/tabellebegriffe.png"/>
 	<p>
 		Bei relationalen Datenbanken ist es wichtig, dass wir die einzelnen Objekte außeinander halten können. Dazu wird ein Attribut oder eine Kombination aus mehreren Attributen zum sogenannten <b>Primärschlüssel</b> der Entität. Jedes Objekt muss einen Wert für diesen Primärschlüssel besitzen, und dieser Wert muss diesem Objekt eindeutig zuordnungsbar sein, also für alle Objekte der Entität einzigartig sein.<br/>
-		In unserem Beispiel könnten wir als Primärschlüssel der Entität "Schüler" die Kombination aus Vorname und Name nehmen, jedoch stellt sich da das Problem, dass es Schüler mit gleichen Namen geben kann. Daher ist es in vielen Tabellen üblich, als Primärschlüssel eine einzigarte Nummer zuzuweisen. Hier könnten wir also als Primärschlüssel ein neues Attribut "SchuelerNr" hinzufügen.
+		In unserem Beispiel könnten wir als Primärschlüssel der Entität "Schüler" die Kombination aus Vorname und Name nehmen, jedoch stellt sich da das Problem, dass es Schüler mit gleichen Namen geben kann. Daher ist es in vielen Tabellen üblich, als Primärschlüssel eine einzigartige Nummer zuzuweisen. Hier könnten wir also als Primärschlüssel ein neues Attribut "SchuelerNr" hinzufügen.
 	</p>
 	<div class="title-secondary" id="beziehungen">Beziehungen zwischen Tabellen</div>
 	<p>
@@ -119,6 +119,39 @@
 	</p>
 	<div class="title-tertiary" id="chen-notation">Chen-Notation</div>
 	<p>
-		
+		Mit der <b>Chen-Notation</b> wird gekennzeichnet, welche Art von Beziehung zwischen zwei Entitäten vorliegt. Um dies zu veranschaulichen: 
 	</p>
+	<ul>
+		<li>Ein Schüler kann mehrere Schulbücher ausleihen, aber ein Schulbuch wird nur von einem Schüler ausgeliehen.<br/>heißt <b>1:n</b>-Beziehung</li>
+		<li>Ein Kunde kann in einem Webshop mehrere Produkte kaufen, und ein Produkt kann von mehreren Kunden gekauft werden.<br/>heißt <b>m:n</b>-Beziehung</li>
+		<li>Die Filiale einer Bäckerkette hat genau eine Adresse, und an einer Adresse steht genau eine Bäckerfiliale.<br/>heißt <b>1:1</b>-Beziehung</li>
+	</ul>
+	<p>Diese Notation kann auch in ER-Modelle eingebunden werden:</p>
+	<img src="resources/chen-notation.png" class="wide-image"/>
+	<p>
+		Im Falle einer 1:1-Beziehung können die Eigenschaften der einen Entität in Attribute der anderen Entität umgewandelt werden, da von beiden Seiten aus ein Objekt sich immer nur in genau einer Beziehung befindet: im Bäckerbeispiel wäre die Adresse dann einfach nur ein Attribut der Entität "Bäckerfiliale".<br/>
+		Eine 1:n-Beziehung kann dargestellt werden, indem auf der Seite auf der ein Objekt immer nur in einer Beziehung beteiligt ist ein Fremdschlüssel für die Entität zu der die Beziehung besteht hinzugefügt wird.
+		Bei einer m:n-Beziehung kann diese nicht mehr nur durch Attribute dargestellt werden, da es sich von keiner Seite aus um eine einzigartige Beziehung handelt. Dies ist ein Beispiel für ein Problem, dass beim Erstellen einer Datenbank auftreten kann.
+	</p>
+	<div class="title-secondary" id="anomalien">Anomalien in Datenbanken</div>
+	<p>
+		Anomalien in Datenbanken sind Konstruktionsfehler, die dazu führen, dass Daten versehentlich gelöscht werden, nicht gespeichert werden können oder widersprüchlich werden.<br/>
+		Als Beispiel nehmen wir hier wieder unser Schüler-Schulbuch Szenario, doch diesmal haben wir eine Tabelle für alle Ausleihen, wobei für jede Ausleihe die Daten des Schülers und des Buches gespeichert werden.
+	</p>
+	<div class="title-tertiary" id="aenderungs-anom">Änderungsanomalie</div>
+	<p>
+		Bei einer Änderungsanomalie entstehen durch die Veränderung von Daten widersprüchliche Daten. Bei unserem Beispiel könnte sich beispielsweise die Eltern-Mailaddresse eines Schülers ändern. Da jedoch für jede Schulbuchausleihe die Daten des Schülers einzeln gespeichert werden, könnte es durch einen Fehler passieren, dass manche Ausleihen den alten Wert beibehalten und andere erfolgreich geändert werden.
+	</p>
+	<div class="title-tertiary" id="einfuege-anom">Einfügeanomalie</div>
+	<p>
+		Bei einer Einfügeanomalie können Daten in eine Tabelle nicht eingetragen werden, da Daten für den Eintrag fehlen. Bei unserer Ausleihtabelle beispielsweise müsste der Primärschlüssel die Kombination aus Schülernummer und Schulbuchnummer sein, damit ein Schüler mehrere Bücher ausleihen kann. Kommt jetzt jedoch ein neuer Schüler an die Schule, der noch kein Buch ausgeliehen hat, oder wird ein neues Schulbuch gekauft, aber nicht direkt ausgeliehen, können wir diese nicht einspeichern da im einen Fall eine Buchnummer und im anderen Fall eine Schülernummer fehlt.
+	</p>
+	<div class="title-tertiary" id="loesch-anom">Löschanomalie</div>
+	<p>
+		Bei einer Löschanomalie werden bei einem Versuch bestimmte Daten zu löschen versehentlich auch andere Daten aus einer Datenbank gelöscht, die noch benötigt werden. Dies wäre hier beispielsweise der Fall, wenn ein Schüler sein letztes ausgeliehenes Buch zurückgibt. Beim Löschen der Ausleihe der Datenbank würden dann auch alle Daten zu diesem Schüler verloren gehen, da diese in keiner anderen Ausleihe mehr vorhanden sind.
+	</p>
+	<p>
+		Um diese und andere Probleme zu lösen, werden Datenbanken <b>normalisiert.</b> Dies bedeutet, sie schrittweiser bestimmten Kriterien konform zu machen, damit keine Anomalien auftreten und alle <b>Datenbankanforderungen</b> erfüllt werden.
+	</p>
+	<div></div>
 </p>
