--- a/index.html
+++ b/index.html
@@ -153,5 +153,25 @@
 	<p>
 		Um diese und andere Probleme zu lösen, werden Datenbanken <b>normalisiert.</b> Dies bedeutet, sie schrittweiser bestimmten Kriterien konform zu machen, damit keine Anomalien auftreten und alle <b>Datenbankanforderungen</b> erfüllt werden.
 	</p>
-	<div></div>
+	<div class="title-secondary" id="normalisierung">Normalisierung von Datenbanken</div>
+	<div class="title-tertiary" id="einfuehrung-nform">Einführung</div>
+	<div class="title-quaternary" id="db-datenarten">Datenarten</div>
+	<p>
+		Es gibt drei verschiedene Arten von Daten, denen Attribute von Entitäten zugeordnet werden können: <b>Stammdaten, Bewegungsdaten und Prozessdaten</b>
+	</p>
+	<p>
+		<b>Stammdaten</b> sind Daten, die entweder komplett fest und unveränderlich sind (z.B. ein Geburtsdatum) oder sich nur sehr selten verändern (z.B. E-Mail-Addresse eines Online-Accounts).
+	</p>
+	<p>
+		<b>Bewegungsdaten</b> sind Daten, die sich <i>regelmäßig</i> und <i>ereignisbasiert</i> verändern. (z.B. die Anzahl von Tischlampen, die ein Online-Shop noch auf Lager hat)
+	</p>
+	<p>
+		<b>Prozessdaten</b> sind Daten, die sich <i>regelmäßig</i> und <i>fortlaufend</i> verändern. Sie stellen das Fortschreiten eines Prozesses dar. (z.B. bis zu welcher Minute du einen Podcast schon gehört hast)
+	</p>
+	<div class="title-quaternary" id="db-anforderungen">Datenbankanforderungen</div>
+	<p>
+		Während an eine Datenbank und ihr Datenbanksystem in realen Szenarios viele individuelle und spezifischere Anforderungen gestellt werden, können die grundlegenden strukturellen Anforderungen an die Datenbank alleine neben der Anomaliefreiheit auf zwei allgemeine reduziert werden: <b>Datenkonsistenz</b> und <b>Redundanzfreiheit</b>.
+	</p>
+	<p><b>Datenkonsistenz</b> bedeutet, dass die Datenbank keine widersprüchlichen Daten enthalten darf.</p>
+	<p><b>Redundanzfreiheit</b> bedeutet, dass Daten innerhalb einer Datenbank nicht mehrfach oder unnötig komplex gespeichert werden, also so, dass Speicherplatz optimal genutzt wird.</p>
 </p>
